[新增] video handler
