# docs/swagger.yaml
@@ -1,4 +1,4 @@
-basePath: '{{.BasePath}}'
+basePath: /
 definitions:
   structs.APIResult:
     properties:
@@ -6,382 +6,51 @@ definitions:
         type: integer
       error_msg:
         type: string
+      log_id:
+        type: string
       result:
         type: object
     type: object
-  structs.adminCategoryMenu:
-    properties:
-      error_code:
-        description: 錯誤代碼(成功為0)
-        example: 2000
-        type: integer
-      error_msg:
-        description: 錯誤訊息(預設空字串)
-        example: DB CONNECT ERRORR(2000)
-        type: string
-      result:
-        description: 回傳資料
-        items:
-          $ref: '#/definitions/structs.menuList'
-        type: array
-    type: object
-  structs.adminIndex:
-    properties:
-      error_code:
-        description: 錯誤代碼(成功為0)
-        example: 2000
-        type: integer
-      error_msg:
-        description: 錯誤訊息(預設空字串)
-        example: DB CONNECT ERRORR(2000)
-        type: string
-      result:
-        $ref: '#/definitions/structs.adminList'
-        description: 回傳資料
-        type: object
-    type: object
-  structs.adminList:
-    properties:
-      account:
-        description: 帳號
-        example: user01
-        type: string
-      created_at:
-        description: 帳號建立時間
-        example: "2019-02-25 00:00:00"
-        type: string
-      edited_by:
-        description: 最後更改帳號人員
-        example: admin
-        type: string
-      group_id:
-        description: 帳號權限 0:一般,1:超級使用者
-        example: 1
-        type: integer
-      id:
-        description: 流水號
-        example: 2
-        type: integer
-      login_at:
-        description: 最後登入時間
-        example: "2019-02-25 00:00:00"
-        type: string
-      status:
-        description: 帳號狀態 flase:停用,true:啟用
-        example: true
-        type: boolean
-      updated_at:
-        description: 帳號最後更新時間
-        example: "2019-02-25 00:00:00"
-        type: string
-    type: object
-  structs.adminLogin:
-    properties:
-      error_code:
-        description: 錯誤代碼(成功為0)
-        example: 2000
-        type: integer
-      error_msg:
-        description: 錯誤訊息(預設空字串)
-        example: DB CONNECT ERRORR(2000)
-        type: string
-      result:
-        description: 回傳資料
-        items:
-          $ref: '#/definitions/structs.loginInfo'
-        type: array
-    type: object
-  structs.adminLoginBody:
-    properties:
-      account:
-        example: admin
-        type: string
-      pwd:
-        example: "1234"
-        type: string
-    type: object
-  structs.adminRegisterBody:
-    properties:
-      account:
-        description: 帳號
-        example: user02
-        type: string
-      group_id:
-        description: 帳號權限 0:一般,1:超級使用者
-        example: 1
-        type: integer
-      pwd:
-        description: 密碼
-        example: qwe123
-        type: string
-      pwd_confirmation:
-        description: 再次確認密碼
-        example: qwe123
-        type: string
-    type: object
-  structs.editAdminBody:
-    properties:
-      group_id:
-        description: 帳號權限 0:一般,1:超級使用者
-        example: 0
-        type: integer
-      status:
-        description: 帳號狀態 false:停用,true:啟用
-        example: false
-        type: boolean
-    type: object
-  structs.loginInfo:
-    properties:
-      account:
-        description: 帳號
-        example: admin
-        type: string
-      id:
-        description: 帳號流水號ID
-        example: 1
-        type: integer
-      permission:
-        description: 權限
-        example:
-        - PROMOTION_ADMIN
-        items:
-          type: string
-        type: array
-    type: object
-  structs.menuList:
-    properties:
-      id:
-        description: 功能ID
-        example: "1"
-        type: string
-      name:
-        description: 功能名稱
-        example: 跑馬燈
-        type: string
-      route:
-        description: 功能代號
-        example: marquee
-        type: string
-    type: object
-  structs.updatePwdRepoBody:
-    properties:
-      password:
-        description: 密碼
-        example: qwe123
-        type: string
-      pwd_confirmation:
-        description: 再次確認密碼
-        example: qwe123
-        type: string
-    type: object
-host: '{{.Host}}'
+host: 127.0.0.1:9999
 info:
-  contact: {}
-  description: '{{.Description}}'
-  license: {}
-  title: '{{.Title}}'
-  version: '{{.Version}}'
+  contact:
+    email: neil605164@gmail.com
+    name: Neil_Hsieh
+    url: https://google.com
+  description: 上傳影片練習用
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  termsOfService: https://google.com
+  title: 上傳影片
+  version: "1.0"
 paths:
-  /backend/admin:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功
-          schema:
-            $ref: '#/definitions/structs.adminIndex'
-            type: object
-        "400":
-          description: 異常錯誤
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-      summary: '[後台]取管理者清單'
-      tags:
-      - Admin
-  /backend/admin/delete_admin/{id}:
-    delete:
-      description: 只能由 [超級使用者] 操作
-      parameters:
-      - description: 用戶ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-        "400":
-          description: 異常錯誤
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-      summary: '[後台]刪除管理者帳號'
-      tags:
-      - Admin
-  /backend/admin/edit_admin/{id}:
-    put:
-      description: 只能由 [超級使用者] 操作
-      parameters:
-      - description: 用戶ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: 編輯帳號權限
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/structs.editAdminBody'
-          type: object
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-        "400":
-          description: 異常錯誤
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-      summary: '[後台]更改管理者資訊'
-      tags:
-      - Admin
-  /backend/admin/register:
+  /backend/upload_video:
     post:
-      description: 註冊只能由Super Admin進行註冊
+      description: 上傳 mp4 影片
       parameters:
-      - description: 註冊新管理者
-        in: body
-        name: body
+      - description: 影片檔
+        in: formData
+        name: video
         required: true
-        schema:
-          $ref: '#/definitions/structs.adminRegisterBody'
-          type: object
+        type: file
       produces:
-      - application/json
+      - multipart/form-data
       responses:
         "200":
           description: 成功
           schema:
             $ref: '#/definitions/structs.APIResult'
-            type: object
         "400":
           description: 異常錯誤
           schema:
             $ref: '#/definitions/structs.APIResult'
-            type: object
-      summary: '[後台]註冊新管理者'
+      summary: 上傳影片
       tags:
-      - Admin
-  /backend/admin/reset_password/{id}:
-    put:
-      description: 只能由Admin重設密碼 , 重設密碼會回傳隨機字串亂數
-      parameters:
-      - description: 用戶ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功
-          schema:
-            $ref: '#/definitions/structs.updatePwdRepoBody'
-            type: object
-        "400":
-          description: 異常錯誤
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-      summary: '[後台]重設密碼'
-      tags:
-      - Admin
-  /backend/login:
-    post:
-      parameters:
-      - description: 登入功能
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/structs.adminLoginBody'
-          type: object
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-        "400":
-          description: 異常錯誤
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-      summary: '[後台]登入後台'
-      tags:
-      - Other
-  /backend/logout:
-    put:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-        "400":
-          description: 異常錯誤
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-      summary: '[後台]登出'
-      tags:
-      - Other
-  /backend/menu:
+      - Video
+  /test/error_task:
     get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功
-          schema:
-            $ref: '#/definitions/structs.adminCategoryMenu'
-            type: object
-        "400":
-          description: 異常錯誤
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-      summary: '[後台]類別選單'
-      tags:
-      - Other
-  /backend/update_password:
-    put:
-      description: 只能更新自己的密碼
-      parameters:
-      - description: 修改自己的密碼
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/structs.updatePwdRepoBody'
-          type: object
+      description: DB Pool 測試錯誤發生時是否可以回傳正確的 logID
       produces:
       - application/json
       responses:
@@ -389,50 +58,11 @@ paths:
           description: 成功
           schema:
             $ref: '#/definitions/structs.APIResult'
-            type: object
         "400":
           description: 異常錯誤
           schema:
             $ref: '#/definitions/structs.APIResult'
-            type: object
-      summary: '[後台]更新密碼'
-      tags:
-      - Other
-  /backend/user_info:
-    get:
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 用戶資料
-          schema:
-            $ref: '#/definitions/structs.adminLogin'
-            type: object
-        "400":
-          description: 異常錯誤
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-      summary: 取用戶資訊(登入後)
-      tags:
-      - Other
-  /test/clear_session:
-    delete:
-      description: 背景功能
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 成功
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-        "400":
-          description: 異常錯誤
-          schema:
-            $ref: '#/definitions/structs.APIResult'
-            type: object
-      summary: 清除過期session
+      summary: 測試錯誤發生時是否可以回傳正確的 logID
       tags:
       - Test
   /test/get_redis:
@@ -445,15 +75,13 @@ paths:
           description: 成功
           schema:
             $ref: '#/definitions/structs.APIResult'
-            type: object
         "400":
           description: 異常錯誤
           schema:
             $ref: '#/definitions/structs.APIResult'
-            type: object
       summary: 測試 Redis 取值
       tags:
-      - Admin
+      - Test
   /test/ping_db_once:
     get:
       description: DB Pool 連線測試
@@ -464,15 +92,13 @@ paths:
           description: 成功
           schema:
             $ref: '#/definitions/structs.APIResult'
-            type: object
         "400":
           description: 異常錯誤
           schema:
             $ref: '#/definitions/structs.APIResult'
-            type: object
       summary: Ping DB 測試
       tags:
-      - Admin
+      - Test
   /test/ping_db_second:
     get:
       description: DB Pool 連線測試
@@ -483,15 +109,13 @@ paths:
           description: 成功
           schema:
             $ref: '#/definitions/structs.APIResult'
-            type: object
         "400":
           description: 異常錯誤
           schema:
             $ref: '#/definitions/structs.APIResult'
-            type: object
       summary: Ping DB 測試
       tags:
-      - Admin
+      - Test
   /test/set_redis:
     post:
       description: Redis Pool 連線測試
@@ -502,13 +126,11 @@ paths:
           description: 成功
           schema:
             $ref: '#/definitions/structs.APIResult'
-            type: object
         "400":
           description: 異常錯誤
           schema:
             $ref: '#/definitions/structs.APIResult'
-            type: object
       summary: 測試 Redis 存值
       tags:
-      - Admin
+      - Test
 swagger: "2.0"
